--- a/index.qmd
+++ b/index.qmd
@@ -64,7 +64,7 @@ page-layout: full
 </a>
 
 <a href="https://via.placeholder.com/1200x900/e47839/ffffff?text=Western+Blot+Analysis" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation from Summer 2023 at UIOWA; description: Highlighting the importance of antibiotic development for patients with cystic fibrosis.">
-<img src="" <img src="Hendrix Devin 2023 Research Poster.png" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation from Summer 2023 at UIOWA; Highlighting the importance of antibiotic development for patients with cystic fibrosis.">
+<img src="Hendrix Devin 2023 Research Poster.png" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation from Summer 2023 at UIOWA; Highlighting the importance of antibiotic development for patients with cystic fibrosis.">
 <div class="gallery-caption">
 <h4>Pseudomonas aeruginosa Secretion System</h4>
 <p>UIOWA 2023 Poster</p>
