--- a/index.qmd
+++ b/index.qmd
@@ -245,8 +245,8 @@ Nebraska Wesleyan University (NWU), Lincoln, NE</p>
 <li>Coleman Award Recipient 2025. An award provided to up to two exceptional biochemistry majors who exemplify community, research, and what it means to be a Nebraska Wesleyan scholar. This award was accompanied by a $700 award and a nameplate on a placard for Coleman recipients.</li>
 <li>2025 Student Life Leadership Award. Provided to students who demonstrate excellence in scholarships, campus leadership, and service.</li>
 <li>Nebraska Center for Integrated Biomolecular Communication (NCIBC) Undergraduate Student Fellowship $5,000. June 3 - August 2, 2024.</li>
-<li>"Characterizing PilZ Domain Protein Interactions With Type IV Pili Effectors In Biased Twitching Motility In Pseudomonas aeruginosa", Second Place Student Poster, IINSPIRE LSAMP Annual Conference Ames, Iowa, February 9-10, 2024</li>
-<li>"Characterizing PilZ Domain Protein Interactions With Type IV Pili Effectors In Biased Twitching Motility In Pseudomonas aeruginosa", Favorite Poster Winner, IINSPIRE LSAMP Annual Conference Ames, Iowa, February 9-10, 2024</li>
+<li>"Characterizing PilZ Domain Protein Interactions With Type IV Pili Effectors In Biased Twitching Motility In Pseudomonas aeruginosa", Second Place Student Poster, IINSPIRE LSAMP Annual Conference Ames, Iowa, February 9-10, 2024. Included a $200 award.</li>
+<li>"Characterizing PilZ Domain Protein Interactions With Type IV Pili Effectors In Biased Twitching Motility In Pseudomonas aeruginosa", Favorite Poster Winner, IINSPIRE LSAMP Annual Conference Ames, Iowa, February 9-10, 2024. Included a $250 award.</li>
 <li>Nebraska Wesleyan Dean's List 2021-2022, 2024</li>
 </ul>
 </div>
