--- a/index.qmd
+++ b/index.qmd
@@ -89,7 +89,26 @@ page-layout: full
 
 <a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0001.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
 <a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0002.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
-<img src="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0003.jpg" alt="Fluorescence microscopy image" loading="lazy">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0003.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0004.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0005.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0006.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0007.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0008.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0009.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0010.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0011.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0012.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0013.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0014.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0015.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0016.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0017.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0018.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0019.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0020.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<a href="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0021.jpg" class="gallery-item glightbox" data-gallery="research" data-glightbox="title: Presentation; description: Presentation on Mycobacteria tuberculosis.">
+<img src="Slides/12 Minute Oral Presentation Structural Biology Lab Gels_page-0001.jpg" alt="Fluorescence microscopy image" loading="lazy">
 <div class="gallery-caption">
 <h4>Slide Presentation</h4>
 <p>Slide Presentation</p>
